--- a/appinfo.json
+++ b/appinfo.json
@@ -11,8 +11,13 @@
     "resources": {
         "media": [
             {
+                "file": "images/background.png",
+                "name": "IMAGE_BACKGROUND",
+                "type": "png"
+            },
+            {
                 "file": "fonts/perfect-dos-vga.ttf",
-                "name": "FONT_KEY_TEST_42",
+                "name": "FONT_PERFECT_DOS_48",
                 "type": "font"
             }
         ]
