--- a/appinfo.json
+++ b/appinfo.json
@@ -1,6 +1,7 @@
 {
     "appKeys": {
-        "dummy": 0
+        "KEY_CONDITIONS": 1,
+        "KEY_TEMPERATURE": 0
     },
     "capabilities": [
         "location"
